--- a/seqspeccode_v2/example_data/rna.yml
+++ b/seqspeccode_v2/example_data/rna.yml
@@ -14,7 +14,7 @@ library_protocol: 10xv3 RNA
 library_kit: Not-specified
 sequence_spec:
 - !Read # contains UMI and barcode
-  read_id: R1.fastq.gz
+  read_id: scRNA_R1.fq
   name: Read 1
   modality: rna
   primer_id: r1_primer
@@ -22,7 +22,7 @@ sequence_spec:
   max_len: 28
   strand: pos
 - !Read
-  read_id: R2.fastq.gz
+  read_id: scRNA_R2.fq
   name: Read 2
   modality: rna
   primer_id: r2_primer
