adding parameter seqSpecDirectory

--- a/seqspeccode_v2/input.config
+++ b/seqspeccode_v2/input.config
@@ -1,2 +1,3 @@
-params.seqSpec_yaml_rna =  "/content/example_data/rna.yml"
-params.seqSpec_yaml_guide =  "/content/example_data/guide.yml"
+params.seqSpecDirectory = "/content/example_data/"
+params.seqSpec_yaml_rna =  "rna.yml"
+params.seqSpec_yaml_guide =  "guide.yml"
