--- a/kb_mapping/input.config
+++ b/kb_mapping/input.config
@@ -1,8 +1,6 @@
-params.MappingDirectory = "example_data"
-params.out_name_dir = "MappingOutput"
-params.fastq_file1 = "scRNA_R1.fq"
-params.fastq_file2 = "scRNA_R2.fq"
-params.transcriptome_idx = "transcriptome_index.idx"
-params.transcriptome_t2g = "transcriptome_t2g.txt"
-params.parsed_seqSpec_file = "rna_parsed_seqSpec.txt"
-params.whitelist = "3M-february-2018.txt"
+params.fastq_file1 = "example_data/scRNA_R1.fq"
+params.fastq_file2 = "example_data/scRNA_R2.fq"
+params.transcriptome_idx = "example_data/transcriptome_index.idx"
+params.transcriptome_t2g = "example_data/transcriptome_t2g.txt"
+params.parsed_seqSpec_file = "example_data/rna_parsed_seqSpec.txt"
+params.whitelist = "example_data/3M-february-2018.txt"
