--- a/Workflows/main_pipeline/input.config
+++ b/Workflows/main_pipeline/input.config
@@ -1,16 +1,13 @@
 
 params {
     // Parameters for seqSpec workflows
-    seqSpecDirectory = "Modules/seqspeccode/example_data"
+    seqSpecDirectory = "example_data"
     seqSpec_yaml_rna = "rna.yml"
-    seqSpec_yaml_guide = "guide.yml"
-    seqSpec_yaml_multiseq = "multiseq.yml"
 
     // Parameters for download workflow
     TRANSCRIPTOME_REFERENCE = "human"
 
     // Parameters for mapping workflow
-    out_name_dir = "Modules/kb_mapping/example_data/MappingOutput"
-    fastq_file1 = "Modules/kb_mapping/example_data/scRNA_R1.fq"
-    fastq_file2 = "Modules/kb_mapping/example_data/scRNA_R2.fq"
+    fastq_file1 = "example_data/scRNA_R1.fq"
+    fastq_file2 = "example_data/scRNA_R2.fq"
 }
